# spECK

./: CMakeLists.txt  config.ini  linuxsetup.sh  readme.md
include/: COO.h  CSR.h  Compare.h  Config.h  DataLoader.h  Executor.h  HashMap.cuh  Multiply.h  RunConfig.h  Timings.h  Transpose.h  Vector.h  WorkDistribution.h  common.cuh  common.h  dCSR.h  meta_utils.h  multi_arch_build.h  spECKConfig.h
include/CUDATools/: error.h  event.h  memory.h  memory_space.h  stream.h  unique_handle.h
include/GPU/: BlockRange.cuh  Hash.cuh  HelperFunctions.cuh  consistent_gpu_memory.h  limits.cuh  profiler.cuh  scan_largearray_kernel.cuh  spECKKernels.h  spECK_HashLoadBalancer.cuh  spECK_HashSpGEMM.cuh
source/: COO.cpp  CSR.cpp  Config.cpp  DataLoader.cpp  Executor.cpp  RunConfig.cpp  dCSR.cpp  runspECK.cpp
source/GPU/: Compare.cu  Multiply.cu  Transpose.cu  common.cu  memory.cpp  profiler.cu
